--- a/Monarch-Butterfly-Migration.ipynb
+++ b/Monarch-Butterfly-Migration.ipynb
@@ -36,7 +36,7 @@
     {
      "data": {
       "text/plain": [
-       "<function nt.getcwd()>"
+       "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs'"
       ]
      },
      "execution_count": 3,
@@ -45,92 +45,32 @@
     }
    ],
    "source": [
-    "monarchs_2001 = pd.read_csv(r\".\\2001 Season Summary.csv\")\n",
+    "monarchs2001 = pd.read_csv(\"Data\\Monarchs2001.csv\")\n",
+    "monarchs2000 = pd.read_csv(\"Data\\Monarchs2000.csv\")\n",
+    "monarchs1999 = pd.read_csv(\"Data\\Monarchs1999.csv\")\n",
+    "monarchs1998 = pd.read_csv(\"Data\\Monarchs1998.csv\")\n",
+    "monarchs1997 = pd.read_csv(\"Data\\Monarchs1997.csv\")\n",
+    "monarchs1996 = pd.read_csv(\"Data\\Monarchs1996.csv\")\n",
+    "monarchs1995 = pd.read_csv(\"Data\\Monarchs1995.csv\")\n",
+    "monarchs1994 = pd.read_csv(\"Data\\Monarchs1994.csv\")\n",
+    "\n",
     "\n",
     "        #convert pandas to SQL table\n",
-    "monarchs_2001.to_sql(\"monarchs_2001\", db, if_exists=\"replace\")\n",
+    "monarchs2001.to_sql(\"Monarchs2001\", db, if_exists=\"replace\")\n",
+    "monarchs2000.to_sql(\"monarchs2000\", db, if_exists=\"replace\")\n",
+    "monarchs1999.to_sql(\"monarchs1999\", db, if_exists=\"replace\")\n",
+    "monarchs1998.to_sql(\"monarchs1998\", db, if_exists=\"replace\")\n",
+    "monarchs1997.to_sql(\"monarchs1997\", db, if_exists=\"replace\")\n",
+    "monarchs1996.to_sql(\"monarchs1996\", db, if_exists=\"replace\")\n",
+    "monarchs1995.to_sql(\"monarchs1995\", db, if_exists=\"replace\")\n",
+    "monarchs1994.to_sql(\"monarchs1994\", db, if_exists=\"replace\")\n",
     "\n",
-    "os.getcwd\n",
-    "\n"
+    "os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>type</th>\n",
-       "      <th>name</th>\n",
-       "      <th>tbl_name</th>\n",
-       "      <th>rootpage</th>\n",
-       "      <th>sql</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>index</td>\n",
-       "      <td>ix_monarchs_2001_index</td>\n",
-       "      <td>monarchs_2001</td>\n",
-       "      <td>3</td>\n",
-       "      <td>CREATE INDEX \"ix_monarchs_2001_index\"ON \"monar...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>table</td>\n",
-       "      <td>monarchs_2001</td>\n",
-       "      <td>monarchs_2001</td>\n",
-       "      <td>2</td>\n",
-       "      <td>CREATE TABLE \"monarchs_2001\" (\\n\"index\" INTEGE...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    type                    name       tbl_name  rootpage  \\\n",
-       "0  index  ix_monarchs_2001_index  monarchs_2001         3   \n",
-       "1  table           monarchs_2001  monarchs_2001         2   \n",
-       "\n",
-       "                                                 sql  \n",
-       "0  CREATE INDEX \"ix_monarchs_2001_index\"ON \"monar...  \n",
-       "1  CREATE TABLE \"monarchs_2001\" (\\n\"index\" INTEGE...  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "schema = pd.read_sql('SELECT * FROM sqlite_master ORDER by name', db)\n",
-    "schema"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +124,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>Tagger</td>\n",
+       "      <td>Tag State</td>\n",
        "      <td>TEXT</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
@@ -193,7 +133,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>Tag  Location, Date</td>\n",
+       "      <td>Tag Date</td>\n",
        "      <td>TEXT</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
@@ -202,7 +142,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>Report Date, Location</td>\n",
+       "      <td>Report State</td>\n",
        "      <td>TEXT</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
@@ -211,7 +151,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>5</td>\n",
-       "      <td>Reporter</td>\n",
+       "      <td>Report Country</td>\n",
        "      <td>TEXT</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
@@ -220,8 +160,17 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>6</td>\n",
-       "      <td>Miles</td>\n",
+       "      <td>Report Date</td>\n",
        "      <td>TEXT</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Miles</td>\n",
+       "      <td>REAL</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
        "      <td>0</td>\n",
@@ -231,24 +180,215 @@
        "</div>"
       ],
       "text/plain": [
-       "   cid                   name     type  notnull dflt_value  pk\n",
-       "0    0                  index  INTEGER        0       None   0\n",
-       "1    1                Tag No.     TEXT        0       None   0\n",
-       "2    2                 Tagger     TEXT        0       None   0\n",
-       "3    3    Tag  Location, Date     TEXT        0       None   0\n",
-       "4    4  Report Date, Location     TEXT        0       None   0\n",
-       "5    5               Reporter     TEXT        0       None   0\n",
-       "6    6                  Miles     TEXT        0       None   0"
+       "   cid            name     type  notnull dflt_value  pk\n",
+       "0    0           index  INTEGER        0       None   0\n",
+       "1    1         Tag No.     TEXT        0       None   0\n",
+       "2    2       Tag State     TEXT        0       None   0\n",
+       "3    3        Tag Date     TEXT        0       None   0\n",
+       "4    4    Report State     TEXT        0       None   0\n",
+       "5    5  Report Country     TEXT        0       None   0\n",
+       "6    6     Report Date     TEXT        0       None   0\n",
+       "7    7           Miles     REAL        0       None   0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_type = pd.read_sql('SELECT * FROM PRAGMA_TABLE_INFO(\"monarchs_2001\")', db)\n",
+    "data_type = pd.read_sql('SELECT * FROM PRAGMA_TABLE_INFO(\"Monarchs2001\")', db)\n",
     "data_type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tag No.</th>\n",
+       "      <th>Tag State</th>\n",
+       "      <th>Tag Date</th>\n",
+       "      <th>Report State</th>\n",
+       "      <th>Report Country</th>\n",
+       "      <th>Report Date</th>\n",
+       "      <th>Miles</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AAD929</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>2001-09-12</td>\n",
+       "      <td>Michoacán</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>2002-02-11</td>\n",
+       "      <td>2344.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AAD844</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>2001-09-12</td>\n",
+       "      <td>Michoacán</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>2002-03-08</td>\n",
+       "      <td>2343.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AIO261</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>2001-09-24</td>\n",
+       "      <td>Michoacán</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>2002-03-13</td>\n",
+       "      <td>2329.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AAU820</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>2001-08-29</td>\n",
+       "      <td>Michoacán</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>2002-02-27</td>\n",
+       "      <td>2315.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ABG581</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>2001-09-16</td>\n",
+       "      <td>Michoacán</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>2002-03-13</td>\n",
+       "      <td>2303.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1957</th>\n",
+       "      <td>ADE225</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MN</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2001-10-06</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958</th>\n",
+       "      <td>ABW153</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Michoacán</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>2002-03-08</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1959</th>\n",
+       "      <td>AJA875</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Michoacán</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>2002-02-26</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1960</th>\n",
+       "      <td>ADR234</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Michoacán</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>2002-02-26</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1961</th>\n",
+       "      <td>AAG669</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2001-09-16</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1962 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Tag No. Tag State    Tag Date Report State Report Country Report Date  \\\n",
+       "0     AAD929        MA  2001-09-12    Michoacán         MEXICO  2002-02-11   \n",
+       "1     AAD844        MA  2001-09-12    Michoacán         MEXICO  2002-03-08   \n",
+       "2     AIO261        NY  2001-09-24    Michoacán         MEXICO  2002-03-13   \n",
+       "3     AAU820        NY  2001-08-29    Michoacán         MEXICO  2002-02-27   \n",
+       "4     ABG581        NY  2001-09-16    Michoacán         MEXICO  2002-03-13   \n",
+       "...      ...       ...         ...          ...            ...         ...   \n",
+       "1957  ADE225       NaN         NaN           MN            USA  2001-10-06   \n",
+       "1958  ABW153       NaN         NaN    Michoacán         MEXICO  2002-03-08   \n",
+       "1959  AJA875       NaN         NaN    Michoacán         MEXICO  2002-02-26   \n",
+       "1960  ADR234       NaN         NaN    Michoacán         MEXICO  2002-02-26   \n",
+       "1961  AAG669       NaN         NaN           CT            USA  2001-09-16   \n",
+       "\n",
+       "       Miles  \n",
+       "0     2344.0  \n",
+       "1     2343.0  \n",
+       "2     2329.0  \n",
+       "3     2315.0  \n",
+       "4     2303.0  \n",
+       "...      ...  \n",
+       "1957     NaN  \n",
+       "1958     NaN  \n",
+       "1959     NaN  \n",
+       "1960     NaN  \n",
+       "1961     NaN  \n",
+       "\n",
+       "[1962 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "monarchs2001"
    ]
   },
   {
