changed csv to pickles

--- a/Data/Monarchs_1995_cleanup.ipynb
+++ b/Data/Monarchs_1995_cleanup.ipynb
@@ -92,7 +92,7 @@
        "      <td>index</td>\n",
        "      <td>ix_monarchs1995_index</td>\n",
        "      <td>monarchs1995</td>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "      <td>CREATE INDEX \"ix_monarchs1995_index\"ON \"monarc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -109,7 +109,7 @@
       ],
       "text/plain": [
        "    type                   name      tbl_name  rootpage  \\\n",
-       "0  index  ix_monarchs1995_index  monarchs1995         4   \n",
+       "0  index  ix_monarchs1995_index  monarchs1995         3   \n",
        "1  table           monarchs1995  monarchs1995         2   \n",
        "\n",
        "                                                 sql  \n",
@@ -1849,11 +1849,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_table.to_csv(\"Monarchs1995.csv\", index = False)"
+    "new_table.to_pickle(\"Monarchs1995.pkl\")"
    ]
   }
  ],
