--- a/Data/Monarchs_1999_cleanup.ipynb
+++ b/Data/Monarchs_1999_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,24 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Arink\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:2712: UserWarning: The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
-      "  method=method,\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs\\\\Data'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +110,7 @@
        "1  CREATE TABLE \"monarchs1999\" (\\n\"index\" INTEGER...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +260,7 @@
        "8    8            Miles     REAL        0       None   0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +446,7 @@
        "[751 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +571,7 @@
        "[751 rows x 2 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +709,7 @@
        "[751 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +909,7 @@
        "[751 rows x 7 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1110,7 @@
        "[751 rows x 7 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1156,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1183,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,11 +1212,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_table.to_csv(\"Monarchs1999.csv\", index = False)"
+    "new_table.to_pickle(\"Monarchs1999.pkl\")"
    ]
   }
  ],
