--- a/Data/Monarchs_1994_cleanup.ipynb
+++ b/Data/Monarchs_1994_cleanup.ipynb
@@ -92,7 +92,7 @@
        "      <td>index</td>\n",
        "      <td>ix_monarchs1994_index</td>\n",
        "      <td>monarchs1994</td>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "      <td>CREATE INDEX \"ix_monarchs1994_index\"ON \"monarc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -109,7 +109,7 @@
       ],
       "text/plain": [
        "    type                   name      tbl_name  rootpage  \\\n",
-       "0  index  ix_monarchs1994_index  monarchs1994         4   \n",
+       "0  index  ix_monarchs1994_index  monarchs1994         3   \n",
        "1  table           monarchs1994  monarchs1994         2   \n",
        "\n",
        "                                                 sql  \n",
@@ -1704,7 +1704,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_table.to_csv(\"Monarchs1994.csv\", index = False)"
+    "new_table.to_pickle(\"Monarchs1994.pkl\")"
    ]
   }
  ],
