--- a/Data/Monarchs_1997_cleanup.ipynb
+++ b/Data/Monarchs_1997_cleanup.ipynb
@@ -92,7 +92,7 @@
        "      <td>index</td>\n",
        "      <td>ix_monarchs1997_index</td>\n",
        "      <td>monarchs1997</td>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>CREATE INDEX \"ix_monarchs1997_index\"ON \"monarc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -109,7 +109,7 @@
       ],
       "text/plain": [
        "    type                   name      tbl_name  rootpage  \\\n",
-       "0  index  ix_monarchs1997_index  monarchs1997         3   \n",
+       "0  index  ix_monarchs1997_index  monarchs1997         4   \n",
        "1  table           monarchs1997  monarchs1997         2   \n",
        "\n",
        "                                                 sql  \n",
@@ -964,11 +964,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_table.to_csv(\"Monarchs1997.csv\", index = False)"
+    "new_table.to_pickle(\"Monarchs1997.pkl\")"
    ]
   }
  ],
